@startuml ClassdiagramCreature
skinparam ClassAttributeIconSize 0
skinparam Monochrome true
hide circle
class Creature {
    + Health : int <<get>> <<set>>
    + Shield : int <<get>> <<set>>
    # Name : string <<get>> <<set>>
    + Creature(name:string)
    + GetInfo() : string
}
class Knight {
    # Weapon : string <<get>> <<set>>
    + Knight(name:string, weapon:string)
    + Attack() : void
}
class Dragon {
    # Color : string <<get>> <<set>>
    + Dragon(name:string, Color:string)
    + Attack() : void
}
class Program {
    {static} Main(args:string[]) : void
}
Creature <|-- Knight
Creature <|-- Dragon
@enduml
